--- a/input.css
+++ b/input.css
@@ -3,10 +3,10 @@
 @tailwind utilities;
 
 body {
-	font-family: sans-serif;
-	text-align: center;
+    font-family: sans-serif;
+    text-align: center;
 }
 
 html {
-    @apply scroll-smooth;
+    @apply scroll-smooth
 }
