--- a/style/output.css
+++ b/style/output.css
@@ -714,6 +714,11 @@ video {
   line-height: 1.75rem;
 }
 
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -732,6 +737,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
+}
+
 .transition-all {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -742,6 +752,10 @@ video {
   transition-duration: 200ms;
 }
 
+.duration-1000 {
+  transition-duration: 1000ms;
+}
+
 body {
   font-family: sans-serif;
   text-align: center;
@@ -749,6 +763,26 @@ body {
 
 html {
   scroll-behavior: smooth;
+}
+
+.before\:opacity-0::before {
+  content: var(--tw-content);
+  opacity: 0;
+}
+
+.before\:content-\[\'\{\}\'\]::before {
+  --tw-content: '{}';
+  content: var(--tw-content);
+}
+
+.after\:opacity-100::after {
+  content: var(--tw-content);
+  opacity: 1;
+}
+
+.after\:content-\[\'\{\}\'\]::after {
+  --tw-content: '{}';
+  content: var(--tw-content);
 }
 
 .group:hover .group-hover\:-translate-y-2 {
